@startuml DiagramaDominios

' Cabo Calebe, Tópicos de Programação I - UnB
' Diagrama de Classes UML para a Camada de Domínios (C++ Fiel)

' Configurações Visuais
skinparam classAttributeIconSize 0
skinparam defaultFontName Inter
skinparam linetype ortho
skinparam package {
    BorderColor #1E90FF
    BackgroundColor #F0F8FF
    FontColor #1E90FF
}
skinparam class {
    BackgroundColor #FFFFE0
    BorderColor #DAA520
}

package Dominios {

    ' Domínios baseados em String
    class Nome << dominio >> {
        - string nomeStr
        --
        + Nome()
        + Nome(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        --
        - void validar(const string &valor)
    }

    class Email << dominio >> {
        - string emailStr
        --
        + Email()
        + Email(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        --
        - void validar(const string &valor)
    }

    class Ramal << dominio >> {
        - string ramalStr
        --
        + Ramal()
        + Ramal(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        --
        - void validar(const string &valor)
    }

    class Senha << dominio >> {
        - string senhaStr
        --
        + Senha()
        + Senha(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        --
        - void validar(string valor)
    }

    class Endereco << dominio >> {
        - string enderecoStr
        --
        + Endereco()
        + Endereco(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        --
        - void validar(string valor)
    }

    class Codigo << dominio >> {
        - string codigoStr
        --
        + Codigo()
        + Codigo(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        --
        - void validar(string valor)
    }

    class Cartao << dominio >> {
        - string cartaoStr
        --
        + Cartao()
        + Cartao(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        --
        - void validar(string valor)
    }

    class Telefone << dominio >> {
        - string telefoneStr
        --
        + Telefone()
        + Telefone(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        --
        - void validar(string valor)
    }

    class Numero << dominio >> {
        - string numeroStr ' O atributo é string no codigo, apesar de ser nome de numero'
        --
        + Numero()
        + Numero(const string &valor)
        + void setValor(const string &valor)
        + string getValor() const
        --
        - void validar(string valor)
    }

    ' Domínios baseados em Numéricos/Especiais
    class Capacidade << dominio >> {
        - int capacidadeInt
        --
        + Capacidade()
        + Capacidade(const int &valor)
        + void setValor(const int &valor)
        + int getValor() const
        --
        - void validar(int valor)
    }

    ' DINHEIRO: Assumindo que você usará um atributo interno como 'valorFloat' ou 'dinheiroFloat'
    class Dinheiro << dominio >> {
        - float valor ' Mantido como float, mas você pode mudar o nome interno se quiser'
        --
        + Dinheiro()
        + Dinheiro(float)
        + void setValor(float)
        + float getValor() const
        --
        - void validar(float)
    }

    ' CLASSE DATA
    class Data << dominio >> {
        - {static} int const TIPO_DIA
        - {static} int const TIPO_MES
        - {static} int const TIPO_ANO

        --
        + int dia
        + int mes
        + int ano
        + {static} int const JAN
        + {static} int const FEV
        + {static} int const MAR
        + {static} int const MAI
        + {static} int const ABR
        + {static} int const JUN
        + {static} int const JUL
        + {static} int const AGO
        + {static} int const SET
        + {static} int const OUT
        + {static} int const NOV
        + {static} int const DEZ

        --
        + Data()
        + Data(const string &dataStr)
        + string toString()
        + void setData(int d, int m, int a)
        + int getDia()
        + int getMes()
        + int getAno()
        --
        + void validar(int tipo, int valor)
    }

    ' Classes de Validação e Exceção (A Data herda dessas interfaces)
    abstract class ValidarInt
    abstract class exception

    ValidarInt <|-- Data
    exception <|-- Data

}
@enduml